# questoesdeenzzinho

./: .replit  README.md  app.py  pyproject.toml  replit.md  replit.nix
attached_assets/: Pasted-Voc-um-gerador-de-quest-es-matem-ticas-de-alto-n-vel-co_1764711363430.txt  Pasted-eu-t-criando-um-gpt-que-faz-projetos-de-quest-es-para-m_1764711210153.txt
src/generators/: __init__.py  pdf_generator.py  question_engine.py  question_templates.py
src/models/: __init__.py  curriculum.py  question.py
static/css/: style.css
templates/: about.html  base.html  generate.html  index.html  preview.html  questions.html  volume_questions.html
