[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "jax>=0.5.0",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyyaml>=6.0.3",
    "sympy>=1.14.0",
    "weasyprint>=67.0",
]
